# direct-upload

./: .gitignore  Cargo.toml  Readme.md  package-lock.json  package.json  wrangler.toml
src/: client.rs  index.html  lib.rs  main.rs
