[package]
name = "direct-upload"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.7"
google-cloud-default = { version = "0.1.0", features = ["storage"] }
google-cloud-storage = "0.9.0"
serde = { version = "1.0.152", features = ["derive"] }
tokio = { version = "1.25.0", features = ["rt-multi-thread", "macros"] }
