[package]
name = "direct-upload"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
url = "2.3.1"
worker = "0.0.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
