[package]
name = "direct-upload"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
async-trait = "0.1.64"
chrono = { version = "0.4.23", features = ["wasmbind"] }
console_error_panic_hook = { version = "0.1.1", optional = true }
getrandom = { version = "0.2", features = ["js"] }
js-sys = "0.3.61"
jwt-compact = { version = "0.6.0", features = ["with_rsa"] }
rsa = "0.8.1"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
url = "2.3.1"
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4.34"
worker = "0.0.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
